# qlycms-backend

./: .env.example  .gitignore  Dockerfile  FRAMEWORK_OVERVIEW.md  Makefile  README.md  SETUP_COMPLETE.md  SPRINT_1.3_SUMMARY.md  alembic.ini  check_tables.py  docker-compose.yml  migrate.ps1  pyproject.toml  requirements.txt  start-dev.sh  start.sh
alembic/: env.py
alembic/versions/: 2025_10_08_0958-da5f0beeccb9_add_ycms_user_model_with_usertype_and_.py  2025_10_08_1028-b4501b38c47f_add_suppliers_table.py
app/: main.py
app/api/: deps.py
app/api/errors/: __init__.py  http_error.py
app/api/v1/: auth.py  health.py  items.py  router.py  suppliers.py  users.py
app/core/: auth.py  authorization.py  config.py  constants.py  events.py  logging.py  security.py  users.py
app/db/: session.py
app/models/: base.py  item.py  mixins.py  supplier.py  user.py
app/repositories/: base.py  item.py  supplier.py  user.py
app/schemas/: base.py  common.py  item.py  supplier.py  user.py
app/services/: item_service.py  supplier_service.py  user_service.py
scripts/: README.md  create_users_table.py  create_users_table.sql  create_users_table_clean.sql  quick_create_users.ps1  rollback_users_table.sql  run_create_users_table.ps1  verify_users_table.sql
specification/architieve/: .ai-project-context.json  .cursorrules  AUTH_IMPLEMENTATION.md  BACKEND_ARCHITECTURE_SPECIFICATION.md  CODE_TEMPLATES.md  COMPLETION_REPORT.md  INDEX.md  LLM_CODING_GUIDE.md  PROJECT_SUMMARY.md  QUICK_SNIPPETS.md  README.md  README_AI_DOCS.md  SECURITY_ARCHITECTURE.md  SPRINT_1.2_COMPLETE.md  SUMMARY_VI.md
specification/architieve/.github/: copilot-instructions.md
specification/description/: API_SPECIFICATION.md  COMPLETION_SUMMARY.md  ENTITY_SPECIFICATION.md  INDEX.md  LLM_CHECKLIST.md  PHASE_IMPLEMENTATION_GUIDE.md  PROCESS_FLOW.md  PROJECT_OVERVIEW.md  QUICK_START.md  README.md  README_LLM.md  SYSTEM_ARCHITECTURE.md  mota.md  phieu-giao-hang.sql  phieu-yeu-cau-mua-sam.sql  table-qlms.sql
tests/: conftest.py  test_auth.py  test_health.py  test_suppliers.py  test_suppliers_simple.py
